--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -12,20 +12,13 @@
 /build
 
 # misc
-.eslintcache
 .DS_Store
 .env
-.env.*
-!.env.sample
-.idea/
-.vscode/
-.vercel
-.screenshots/
-
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Local Netlify folder
-.netlify
