--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "install": "^0.13.0",
+    "openai-api": "^1.3.1",
     "pino-http": "^8.3.3",
     "pino-pretty": "^10.0.0"
   },
