--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node src/server.js",
-    "start:dev": "nodemon src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test_1": "mocha --exit"
   },
