--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.0.3",
     "openai": "^3.2.1",
     "pino-http": "^8.3.3",
     "pino-pretty": "^10.0.0"
