--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-pino-logger": "^7.0.0",
     "mongoose": "^7.0.3",
     "openai": "^3.2.1",
+    "pino": "^8.11.0",
     "pino-http": "^8.3.3",
     "pino-pretty": "^10.0.0"
   },
