--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test_1": "mocha --exit"
+    "test_1": "mocha test/test.js --exit",
+    "test_2": "mocha test/test_2.js --exit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
