--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test_1": "mocha test/test.js --exit",
-    "test_2": "mocha test/test_2.js --exit"
+    "test_2": "mocha test/test_2.js --exit",
+    "test_3": "mocha test/test_3.js --exit"
   },
   "author": "",
   "license": "ISC",
