--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -1,38 +1,27 @@
 {
-  "name": "backend",
+  "name": "backend_v1",
   "version": "1.0.0",
-  "description": "Backend for mad lib generator",
+  "description": "",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
-  "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test_1": "mocha --exit",
-    "seed:all": "node src/db/seeds/dataProvider.js --import --all",
-    "seed:libs": "node src/db/seeds/dataProvider.js --import --libs"
+    "build": "echo 📦 Building 🏗 && npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "@types/mongoose": "^5.11.97",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "faker": "^6.6.6",
-    "mongoose": "^7.0.3",
-    "openai": "^3.2.1",
-    "pino-http": "^8.3.3",
-    "pino-pretty": "^10.0.0"
+    "mongoose": "^7.3.4"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "jest": "^29.5.0",
-    "mocha": "^10.2.0",
-    "nodemon": "^2.0.21",
-    "supertest": "^6.3.3"
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.2",
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.1.6"
   }
 }
