--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -15,7 +15,8 @@
     "@types/mongoose": "^5.11.97",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.4"
+    "mongoose": "^7.3.4",
+    "openai": "^3.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
