--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "npm": "9.5.0",
+    "node": "18.14.2"
+  },
   "scripts": {
     "build": "echo 📦 Building 🏗 && npx tsc",
     "start": "node dist/index.js",
