--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "test": "cross-env NODE_ENV=test ENV_FILE=./.env jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +27,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.4.2",
     "concurrently": "^8.2.0",
+    "jest": "^29.6.1",
     "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   }
 }
