--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -8,10 +8,11 @@
     "node": "18.14.2"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "echo 🚧 📦 Building 📦 🚧 && tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "test": "cross-env NODE_ENV=test ENV_FILE=./.env jest --coverage"
+    "test": "npm run build && npx cross-env NODE_ENV=test ENV_FILE=./.env jest",
+    "test:coverage": "npx cross-env NODE_ENV=test ENV_FILE=./.env jest --coverage"
   },
   "keywords": [],
   "author": "",
