--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,12 +20,12 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: Run Tests in backend_v1
+    - name: Clean install
       working-directory: backend_v1
-      run: npm ci && npm test
+      run: npm ci
+    - name: Build
+      working-directory: backend_v1
+      run: npm run build
+    - name: Tests
+      working-directory: backend_v1
+      run: npm test
