--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "- An application that allows users to generate ad-libs using ai based on user prompt.",
   "main": "index.js",
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC"
 }
