--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "- An application that allows users to generate ad-libs using ai based on user prompt.",
   "main": "index.js",
+  "engines": {
+    "npm": "9.5.0",
+    "node": "18.14.2"
+  },
   "devDependencies": {},
   "scripts": {},
   "author": "",
