--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -36,6 +36,7 @@
     "concurrently": "^8.2.0",
     "eslint": "^8.45.0",
     "jest": "^29.6.1",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
