--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "echo 🚧 📦 Building 📦 🚧 && tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/src/index.js\"",
     "test": "npm run build && npx cross-env NODE_ENV=test ENV_FILE=./.env jest --detectOpenHandles",
     "test:coverage": "npx cross-env NODE_ENV=test ENV_FILE=./.env jest --coverage"
   },
