--- a/client_v1/package.json
+++ b/client_v1/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "focus-trap-react": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
