--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.4",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
