--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -25,6 +25,9 @@
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.1",
+    "jwks-rsa": "^3.0.1",
     "mongoose": "^7.3.4",
     "openai": "^3.3.0"
   },
