--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.5.0",
+    "helmet": "^7.0.0",
     "mongoose": "^7.3.4",
     "openai": "^3.3.0"
   },
