--- a/backend_v1/package.json
+++ b/backend_v1/package.json
@@ -45,6 +45,7 @@
     "node-mocks-http": "^1.12.2",
     "nodemon": "^3.0.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
