Finish setting up generator random prompt

--- a/backend_v2/package.json
+++ b/backend_v2/package.json
@@ -27,6 +27,7 @@
     "express-oauth2-jwt-bearer": "^1.3.0",
     "helmet": "^6.0.1",
     "nocache": "^3.0.4",
+    "openai": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
