--- a/client_v2/package.json
+++ b/client_v2/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.14.1",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
