--- a/client_v2/package.json
+++ b/client_v2/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.0.4",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.2.0",
