--- a/backend_v2/package.json
+++ b/backend_v2/package.json
@@ -27,7 +27,9 @@
     "@nestjs/core": "10.3.0",
     "@nestjs/mapped-types": "2.0.4",
     "@nestjs/platform-express": "10.3.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/typeorm": "10.0.1",
+    "@nestjs/websockets": "^10.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-oauth2-jwt-bearer": "^1.3.0",
