--- a/.github/workflows/client-build-test.yml
+++ b/.github/workflows/client-build-test.yml
@@ -17,10 +17,8 @@ jobs:
         run: npm run test
         working-directory: ./client
 
-      - name: Run test coverage
-        run: npm run test:coverage
-        working-directory: ./client
-
-      - name: Check test coverage
-        run: npx nyc check-coverage --lines 75 --functions 75 --branches 75
-        working-directory: ./client
+      - name: Report coverage
+        # Set if: always() to also generate the report if tests are failing
+        # Only works if you set `reportOnFailure: true` in your vite config as specified above
+        if: always()
+        uses: davelosert/vitest-coverage-report-action@v2
