--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "class-validator": "^0.14.1",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.1.0",
+    "nocache": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
