--- a/backend/package.json
+++ b/backend/package.json
@@ -26,11 +26,13 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "helmet": "^7.1.0",
     "mongoose": "^8.1.0",
     "nocache": "^4.0.0",
+    "openai": "^4.25.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
