--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -24,6 +25,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -33,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
