--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.4",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
