--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "npm": "9.5.0",
     "node": "18.14.2"
   },
-  "devDependencies": {},
   "scripts": {},
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.11",
+    "tailwind-merge": "^2.5.4"
+  }
 }
