--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^15.0.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.20",
@@ -21,7 +23,7 @@
     "clsx": "^2.1.1",
     "dropdown-menu": "^0.1.1",
     "lucide-react": "^0.456.0",
-    "next": "15.0.3",
+    "next": "^15.0.3",
     "next-themes": "^0.4.3",
     "npx": "^10.2.2",
     "react": "19.0.0-rc-66855b96-20241106",
