--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.60.5",
     "add": "^2.0.6",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -28,6 +29,7 @@
     "npx": "^10.2.2",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-error-boundary": "^4.1.2",
     "shadcn": "^2.1.6",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
