--- a/client-v2/package.json
+++ b/client-v2/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dropdown-menu": "^0.1.1",
     "lucide-react": "^0.456.0",
     "next": "^15.0.3",
