--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/ai-mad-lib-generator
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+OPENAI_API_KEY=""
