--- a/package.json
+++ b/package.json
@@ -37,17 +37,20 @@
     "@trpc/server": "^11.0.0-rc.446",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compromise": "^14.14.4",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.477.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
+    "openai": "^4.86.1",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-infinite-scroll-component": "^6.1.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
