finish setting up adlib feature flow

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-markdown": "^10.1.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "superjson": "^2.2.1",
