--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.54.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^10.1.0",
