--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@next/third-parties": "^15.3.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -42,7 +43,7 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.477.0",
-    "next": "^15.0.1",
+    "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "openai": "^4.86.1",
     "postgres": "^3.4.4",
