--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "vanilla-cookieconsent": "^3.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
